# web3-examples

./: .editorconfig  .gitignore  Cargo.toml  LICENSE
ink/call_erc20/: Cargo.toml  lib.rs
ink/erc20/: lib.rs  rustfmt.toml
ink/erc721/: lib.rs
solidity/: Auction.sol  MultiSignWallet.sol  VauleStorage.sol
src/: error.rs  main.rs
src/contracts/: Auction.sol  MultiSignWallet.abi  mod.rs
src/contracts/res/: Auction.abi  ValueStorage.abi
src/ethereum/: account.rs  contract.rs  mod.rs  storage_contract.rs  transaction.rs
src/routes/: eth_api.rs  mod.rs
