[package]
name = "web3-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
axum = { version = "0.5.15" }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4" }
log = { version = "0.4.17" }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
web3 = "0.18.0"
secp256k1 = { version = "0.21", features = ["recovery"] }
tokio = "1.20.1"
serde = "1.0.143"
serde_json = "1.0.83"
once_cell = "1.14.0"
utoipa = {version = "2.0.1", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "2.0.1", features = ["axum"] }
